fixed overlap

--- a/style.css
+++ b/style.css
@@ -23,7 +23,6 @@ html, body {
 }
 
 #head {
-    float: left;
     font-family: "Verdana";
     /*font-size: 200%;*/
     height: 10%;
